static/css/base.css
body {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

.dark-mode
{
    background-image: linear-gradient(to bottom right, rgba( 50, 50, 50, 0.9 ), rgba(10, 10, 10, 0.9) );
    background-color: rgba(32, 32, 32, 0.3);
    color: rgba(220, 220, 220, 0.95);
}

.center-all
{
    align-items: center;
    text-align: center;
}

.align-bottom
{
    position: absolute;
    bottom: 0;
}

.scrollable::-webkit-scrollbar
{
    width: 10px;
}
.scrollable::-webkit-scrollbar-track
{
    background-color: rgba(240, 240, 240, 0.1);
    border-radius: 2px;
    border-style: solid;
    border-color: rgba(250, 250, 250, 0.2);
}
.scrollable::-webkit-scrollbar-thumb
{
    background-color: rgba(240, 240, 240, 0.5);
    border-radius: 5px;
}


#console-output
{
    box-sizing: border-box;
    background-color: rgba(42, 42, 42, 0.3);
    border-radius: 1vw;
    text-align: left;
    padding: 10px;
    max-height: 50vh;
    width: calc(100% - 10px);
    overflow-x: hidden;
    overflow-y: scroll;
}

#console-output p
{
    border-bottom: solid 1px rgba(220, 220, 220, 0.95);
    padding: 1px;
}

input
{
    background-color: rgba(50, 50, 50, 0.7);
    border-color: rgba(220, 220, 220, 0.6);
    border-radius: 5px;
    border-style:  ridge;
    color: inherit;
    padding: 1px;
    margin: 2px;
}

input[type="submit"] {
    padding: 3px;
}

#download-form
{
    padding: 10px;
}

.single-line {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    flex: 1;
    justify-content: space-between;
    align-items: stretch;
    text-align: right;
    margin: 3px;
}

.single-line label {
    margin-right: 5px;
}

form input[type="number"] {
    padding: 2px;
}

input[type="checkbox"] {
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
    margin: 3px;
    margin-right: 5px;

    font: inherit;
    color: currentColor;
    width: 1.15em;
    height: 1.15em;
    border: 0.15em solid currentColor;
    border-radius: 0.15em;
    transform: translateY(-0.075em);

    display: grid;
    place-content: center;
}

input[type="checkbox"]::before {
    content: "";
    width: 0.65em;
    height: 0.65em;
    transform: scale(0);
    transition: 120ms transform ease-in-out;
    box-shadow: inset 1em 1em var(--form-control-color);
    background-color: CanvasText;
    transform-origin: center;
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}
  
input[type="checkbox"]:checked::before {
    transform: scale(1);
}

input[type="checkbox"]:hover {
    outline: max(2px, 0.15em) solid currentColor;
    outline-offset: max(2px, 0.15em);
}

